--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
       <p class="lead">Data Scientist | Programmer</p>
       <a
         class="btn btn-lg text-white" style="background-color: #6E85B7;"
-        href="https://www.canva.com/design/DAFTUIsDnyc/mPiKKQ-KFJW5tqN_IOVsZQ/view?utm_content=DAFTUIsDnyc&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+        href="cv-dava.pdf"
         role="button"
-        >View CV</a
+        >View CV (download required)</a
       >
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -224,7 +224,7 @@
         <div class="col-md-4 mb-3">
           <div class="card">
             <img
-              src="img/project/5.jpg"
+              src="img/project/5.png"
               class="card-img-top"
               alt="Experience 2"
             />
